# SDL2-Basics

./: .gitignore  CMakeLists.txt  README.md
Audio/: Android.mk  Android64.mk  CMakeLists.txt  Lesson 4.txt  build-apk.bat  build-apk64.bat
Audio/android/: AndroidManifest.xml  android-aapt.pro  build-apk.bat
Audio/android/res/values/: strings.xml
Audio/android/src/ml/cybermals/Audio/: AudioActivity.java  R.java
Audio/android/tmp/: classes.dex
Audio/src/: main.c
Images/: Android64.mk  CMakeLists.txt  Lesson 2.txt  build-apk64.bat
Images/android/: AndroidManifest.xml  android-aapt.pro  build-apk.bat
Images/android/res/values/: strings.xml
Images/android/src/ml/cybermals/Images/: ImagesActivity.java  R.java
Images/android/tmp/: classes.dex
Images/src/: main.c
Input/: Android.mk  CMakeLists.txt  Lesson 3.txt  build-apk.bat
Input/android/: AndroidManifest.xml  android-aapt.pro  build-apk.bat
Input/android/res/values/: strings.xml
Input/android/src/ml/cybermals/Input/: InputActivity.java  R.java
Input/android/tmp/: classes.dex
Input/src/: main.c
Text/: Android.mk  Android64.mk  CMakeLists.txt  Lesson 5.txt  build-apk.bat  build-apk64.bat
Text/android/: AndroidManifest.xml  android-aapt.pro  build-apk.bat
Text/android/res/values/: strings.xml
Text/android/src/ml/cybermals/Text/: R.java  TextActivity.java
Text/android/tmp/: classes.dex
Text/src/: main.c
Window/: Android.mk  Android64.mk  CMakeLists.txt  Lesson 1.txt  build-apk.bat  build-apk64.bat
Window/android/: AndroidManifest.xml  android-aapt.pro  build-apk.bat
Window/android/res/values/: strings.xml
Window/android/src/ml/cybermals/Window/: R.java  WindowActivity.java
Window/android/tmp/: SDL2Window.apk  classes.dex  tmp.apk
Window/src/: main.c
